# WSearch

./: .gitignore  README.md  package.json  pnpm-lock.yaml  skills-lock.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: file_ops.rs  is_admin.rs  mod.rs  search.rs  usn_debug.rs  window.rs
src-tauri/src/services/: config_store.rs  file_scanner.rs  index_cache.rs  mft_reader.rs  mod.rs  usn_monitor.rs
src/hooks/: useWindowSize.ts
src/types/: index.ts
