[package]
name = "wsearch"
version = "0.1.2"
description = "A Tauri App"
authors = ["wangwj0595"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wsearch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.8"
walkdir = "2.4"
glob = "0.3"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "fs", "macros", "rt", "time"] }
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
dirs = "5.0"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
] }
usnjrnl-forensic = "0.6.0"
ntfs-reader = "0.4.4"
